syntax = "proto3";

package maarpc;

import "types.proto";

message CustomActionRequest {
  optional string handle = 1;
  optional string name = 2;
  optional string act_id = 3;
}

message CustomActionRunParam {
  optional string context = 1;
  optional string task = 2;
  optional string param = 3;
  optional Rect box = 4;
  optional string detail = 5;
}

message CustomActionResponse {
  optional string act_id = 1;
  optional string cmd_id = 2;
  oneof command {
    CustomActionRunParam run = 101;
    bool stop = 102; // void
  }
}

message SubmitCustomActionRequest {
  optional string handle = 1;
  optional string cmd_id = 2;
  optional bool ok = 3;
}
