syntax = "proto3";

package maarpc;

import "types.proto";

message CustomRecognizerRequest {
  optional string handle = 1;
  optional string name = 2;
  optional string reco_id = 3;
}

message CustomRecognizerAnalyzeParam {
  optional string context = 1;
  optional string image_handle = 2;
  optional string task = 3;
  optional string param = 4;
}

message CustomRecognizerResponse {
  optional string reco_id = 1;
  optional string cmd_id = 2;
  oneof command { CustomRecognizerAnalyzeParam analyze = 101; }
}

message CustomRecognizerAnalyzeResult {
  optional bool match = 1;
  optional Rect box = 2;
  optional string detail = 3;
}

message SubmitCustomRecognizerRequest {
  optional string handle = 1;
  optional string cmd_id = 2;
  optional bool ok = 3;
  oneof result { CustomRecognizerAnalyzeResult analyze = 101; }
}
